--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,11 +1,18 @@
 {
   "configurations": [
     {
+      "type": "java",
+      "name": "MergeArray",
+      "request": "launch",
+      "mainClass": "MergeArray",
+      "projectName": "Curious-Freaks-DSA-Journey-JAVA_d5440443"
+    },
+    {
       "type": "pwa-msedge",
       "name": "Launch Microsoft Edge",
       "request": "launch",
       "runtimeArgs": ["--remote-debugging-port=9222"],
-      "url": "c:\\Users\\srini\\.vscode\\extensions\\ms-edgedevtools.vscode-edge-devtools-2.1.9\\out\\startpage\\index.html", // Provide your project's url to finish configuring
+      "url": "c:\\Users\\srini\\.vscode\\extensions\\ms-edgedevtools.vscode-edge-devtools-2.1.9\\out\\startpage\\index.html",
       "presentation": {
         "hidden": true
       }
@@ -15,7 +22,7 @@
       "name": "Launch Microsoft Edge in headless mode",
       "request": "launch",
       "runtimeArgs": ["--headless", "--remote-debugging-port=9222"],
-      "url": "c:\\Users\\srini\\.vscode\\extensions\\ms-edgedevtools.vscode-edge-devtools-2.1.9\\out\\startpage\\index.html", // Provide your project's url to finish configuring
+      "url": "c:\\Users\\srini\\.vscode\\extensions\\ms-edgedevtools.vscode-edge-devtools-2.1.9\\out\\startpage\\index.html",
       "presentation": {
         "hidden": true
       }
@@ -24,7 +31,7 @@
       "type": "vscode-edge-devtools.debug",
       "name": "Open Edge DevTools",
       "request": "attach",
-      "url": "c:\\Users\\srini\\.vscode\\extensions\\ms-edgedevtools.vscode-edge-devtools-2.1.9\\out\\startpage\\index.html", // Provide your project's url to finish configuring
+      "url": "c:\\Users\\srini\\.vscode\\extensions\\ms-edgedevtools.vscode-edge-devtools-2.1.9\\out\\startpage\\index.html",
       "presentation": {
         "hidden": true
       }
